View SelectPaquete.cshtml, View Index.cshtml corregido y Clase ORTWorld corregido

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,4 +4,9 @@
 
 <div>
     <a href='@Url.Action("SelectPaquete")'>Ir al Link</a>
+    @foreach(Paquete a in ViewBag.Paquetes.Values){
+        <img src="~/Img/Hoteles/@a.Hotel">
+        <img src="~/Img/Aereos/@a.Aereo">
+        <img src="~/Img/Excursiones/@a.Excursion">
+    } 
 </div>
