--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,9 +4,13 @@
 
 <div>
     <a href='@Url.Action("SelectPaquete")'>Ir al Link</a>
+    
     @foreach(Paquete a in ViewBag.Paquetes.Values){
-        <img src="~/Img/Hoteles/@a.Hotel">
-        <img src="~/Img/Aereos/@a.Aereo">
-        <img src="~/Img/Excursiones/@a.Excursion"> 
+        @foreach(string b in ViewBag.Paquetes.Keys){
+            <p>Su hotel es @b</p>
+        }
+        <p>Su hotel es</p><img src="~/Img/Hoteles/@a.Hotel">
+        <p>Su Aereo es</p><img src="~/Img/Aereos/@a.Aereo">
+        <p>Su Excursion es</p><img src="~/Img/Excursiones/@a.Excursion"> 
     } 
 </div>
