--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,10 +14,23 @@ body {
   padding: 10px;
 }
 
-
+*{
+  background-color: rgb(162, 214, 216);
+}
 footer {
   margin-top: 10px;
   padding: 10px;
-  background-color: #f8f9fa;
   border-top: 1px solid #e9ecef;
+}
+div
+{
+  background-color: rgb(162, 214, 216);
+  margin: 5px;
+}
+div img{
+  margin: 4px;
+  border-radius: 15px;
+}
+div h3{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
