--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -22,7 +22,7 @@ footer {
   padding: 10px;
   border-top: 1px solid #e9ecef;
 }
-div, label, p
+div, label, p, a
 {
   background-color: rgb(127, 174, 206);
   margin: 5px;
