--- a/Views/Home/SelectPaquete.cshtml
+++ b/Views/Home/SelectPaquete.cshtml
@@ -5,7 +5,7 @@
         {
             <p>@(i + 1): @ViewBag.ListaDestinos[i]</p>
         }
-        <label>Eliga Destino<input type="number" name = "Destino" min="1" max="10" required/></label>
+        <label>Elija Destino<input type="number" name = "Destino" min="1" max="10" required/></label>
     </div>
     <div>
         <h3>Hoteles</h3>
@@ -13,7 +13,7 @@
         {
             <img src="~/Img/Hoteles/@ViewBag.ListaHoteles[i]">
         }
-        <label>Eliga Hotel<input type="number" name= "Hotel" min="1" max="10" required/></label>
+        <label>Elija Hotel<input type="number" name= "Hotel" min="1" max="10" required/></label>
     </div>
     <div>
         <h3>Aereos</h3>
@@ -21,7 +21,7 @@
         {
             <img src="~/Img/Aereos/@ViewBag.ListaAereos[i]">
         }
-        <label>Eliga Aereo<input type="number" name = "Aereo" min="1" max="10" required/></label>
+        <label>Elija Aereo<input type="number" name = "Aereo" min="1" max="10" required/></label>
     </div>
     <div>
         <h3>Excursiones</h3>
@@ -29,7 +29,7 @@
         {
             <img src="~/Img/Excursiones/@ViewBag.ListaExcursiones[i]">
         }
-            <label>Eliga Excursiones<input type="number" name = "Excursion" min="1" max="10" required/></label>
+            <label>Elija Excursiones<input type="number" name = "Excursion" min="1" max="10" required/></label>
     </div>
     
     <input type="submit"/>
