--- a/Views/Home/SelectPaquete.cshtml
+++ b/Views/Home/SelectPaquete.cshtml
@@ -1,36 +1,42 @@
-<form action='@Url.Action("GuardarPaquete")'> 
-    <div> 
-        <h3>Destino</h3>
-        @for(int i = 0; i < ViewBag.ListaDestinos.Count; i++)
-        {
-            <p>@(i + 1): @ViewBag.ListaDestinos[i]</p>
-        }
-        <label>Elija Destino<input type="number" name = "Destino" min="1" max="10" required/></label>
-    </div>
-    <div>
-        <h3>Hoteles</h3>
-        @for(int i = 0; i < ViewBag.ListaDestinos.Count; i++)
-        {
-            <img src="~/Img/Hoteles/@ViewBag.ListaHoteles[i]">
-        }
-        <label>Elija Hotel<input type="number" name= "Hotel" min="1" max="10" required/></label>
-    </div>
-    <div>
-        <h3>Aereos</h3>
-        @for(int i = 0; i < ViewBag.ListaDestinos.Count; i++)
-        {
-            <img src="~/Img/Aereos/@ViewBag.ListaAereos[i]">
-        }
-        <label>Elija Aereo<input type="number" name = "Aereo" min="1" max="10" required/></label>
-    </div>
-    <div>
-        <h3>Excursiones</h3>
-        @for(int i = 0; i < ViewBag.ListaDestinos.Count; i++)
-        {
-            <img src="~/Img/Excursiones/@ViewBag.ListaExcursiones[i]">
-        }
-            <label>Elija Excursiones<input type="number" name = "Excursion" min="1" max="10" required/></label>
-    </div>
-    
-    <input type="submit"/>
-</form>
+
+    <p>@ViewBag.Error</p>
+    <p>@ViewBag.Diferente</p>
+
+    <form action='@Url.Action("GuardarPaquete")'> 
+        <div> 
+            <h3>Destino</h3>
+            @for(int i = 0; i < ViewBag.ListaDestinos.Count; i++)
+            {
+                <p>@(i + 1): @ViewBag.ListaDestinos[i]</p>
+            }
+            <label>Elija Destino<input type="number" name = "Destino" min="1" max="10" required/></label>
+        </div>
+        <div>
+            <h3>Hoteles</h3>
+            @for(int i = 0; i < ViewBag.ListaDestinos.Count; i++)
+            {
+                <img src="~/Img/Hoteles/@ViewBag.ListaHoteles[i]">
+            }
+            <label>Elija Hotel<input type="number" name= "Hotel" min="1" max="10" required/></label>
+        </div>
+        <div>
+            <h3>Aereos</h3>
+            @for(int i = 0; i < ViewBag.ListaDestinos.Count; i++)
+            {
+                <img src="~/Img/Aereos/@ViewBag.ListaAereos[i]">
+            }
+            <label>Elija Aereo<input type="number" name = "Aereo" min="1" max="10" required/></label>
+        </div>
+        <div>
+            <h3>Excursiones</h3>
+            @for(int i = 0; i < ViewBag.ListaDestinos.Count; i++)
+            {
+                <img src="~/Img/Excursiones/@ViewBag.ListaExcursiones[i]">
+            }
+                <label>Elija Excursiones<input type="number" name = "Excursion" min="1" max="10" required/></label>
+        </div>
+        
+        <input type="submit"/>
+    </form>
+
+
